Implement grid resizing

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 <body>
     <h1>Etch-a-sketch</h1>
     <div class="grid-container"></div>
+    <div class="buttons">
+        <button id="resize">Resize</button>
+    </div>
 </body>
 </html>
